--- a/AngularClient/index.html
+++ b/AngularClient/index.html
@@ -11,7 +11,7 @@
     <link href="Content/footer.css" rel="stylesheet" />
     <link href="Content/angular-chart.css" rel="stylesheet" />
     <link href="Content/loadingGif.css" rel="stylesheet" />
-      
+
 </head>
 <body ng-app="app" ng-controller="MainController as vm" data-ng-init="vm.registerToken()" class="ng-cloak">
 
@@ -165,10 +165,11 @@
                 </div>
             </div>
         </div>
-        <!-- Footer -->
-        <div ng-include="'footer.html'"></div>
+
     </div>
 
+   <!-- footer -->
+   <div ng-include="'html/footer.html'"></div>
 
     <div ng-if="$root.isLoadingRegister" class="col-sm-12 loadingGif">
         <div class="windows8">
@@ -190,8 +191,8 @@
         </div>
     </div>
 
-  
-      <!-- Library Scripts -->
+
+    <!-- Library Scripts -->
     <script src="Scripts/jquery-2.2.1.js"></script>
     <script src="scripts/angular.js"></script>
     <script src="Scripts/angular-resource.js"></script>
