--- a/AngularClient/html/footer.html
+++ b/AngularClient/html/footer.html
@@ -1,20 +1,16 @@
-﻿<footer class="footer-distributed">
-    <div class="footer-left">
+﻿<nav class="navbar navbar-default navbar-fixed-bottom footer">
 
-    </div>
-   
-     <div class="footer-center">
+    <div class="col-sm-6 col-sm-offset-3">
         <h3>VoteMyPoll</h3>
-        <p class="footer-company-name"> Posted by: Miron George &copy; 2016</p>
-      
-          <div>
+        <p> Posted by: Miron George &copy; 2016</p>
+        <div>
             <a href="mailto:george.miron2003@gmail.com"><img src="images/glyphicons-gmail.png" /></a> &nbsp; &nbsp;
             <a href="https://www.facebook.com/miron.george"> <img src="images/glyphicons-facebook.png" /></a> &nbsp; &nbsp;
             <a href="https://www.linkedin.com/in/george-miron-48b55469"> <img src="images/glyphicons-linked-in.png" /></a>
         </div>
     </div>
-   
-     <div class="footer-right">
+
+    <div class="col-sm-3">
         <h4>  Contact us: </h4>
         <h4>
             <img src="images/glyphicons-gmail.png" /> &nbsp;
@@ -22,4 +18,5 @@
         </h4>
     </div>
 
-</footer>
+
+</nav>
