--- a/AngularClient/html/footer.html
+++ b/AngularClient/html/footer.html
@@ -1,4 +1,4 @@
-﻿<nav class="navbar navbar-default navbar-fixed-bottom footer">
+﻿<nav class="navbar navbar-default footer">
 
     <div class="col-sm-6 col-sm-offset-3">
         <h3>VoteMyPoll</h3>
