--- a/AngularClient/index.html
+++ b/AngularClient/index.html
@@ -165,10 +165,11 @@
                 </div>
             </div>
         </div>
-        <!-- footer -->
-        <div ng-include="'html/footer.html'"></div>
+        <!-- footer when logged -->
+        <div ng-include="'html/footer.html'" ></div>
     </div>
-
+    <!-- footer -->
+     <div ng-hide="vm.isLoggedIn" class="navbar-fixed-bottom" ng-include="'html/footer.html'"></div>
   
 
     <div ng-if="$root.isLoadingRegister" class="col-sm-12 loadingGif">
