--- a/AngularClient/app/formCategory/formCategoryListView.html
+++ b/AngularClient/app/formCategory/formCategoryListView.html
@@ -73,5 +73,10 @@
             <li><a href="" ng-if="ctrl.Next" ng-click="ctrl.chosePageNr(ctrl.page_nr + 1)">Next page</a></li>
         </ul>
     </nav>
+    <div class="col-sm-2">
+        <div class="btn-group btn-group-justified">
+            <div class="btn btn-default" ng-click="vm.backPage()">Back</div>
+        </div>
+    </div>
 </div>
 
