--- a/AngularClient/app/contact/contactAdminRedirectView.html
+++ b/AngularClient/app/contact/contactAdminRedirectView.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="ContactAdminRedirectController as ctrl">
+﻿<div class="panel panel-default" ng-controller="ContactAdminRedirectController as ctrl">
     <div class="panel-heading">Contact Us</div>
     <div class="panel-body">
 
@@ -53,4 +53,5 @@
             </div>
         </div>
     </div>
+
 </div>
