--- a/AngularClient/app/formResult/formResultView.html
+++ b/AngularClient/app/formResult/formResultView.html
@@ -8,9 +8,9 @@
             <form class="form-horizontal col-sm-10 pollQuestionPanel">
                 <div data-ng-repeat="question in ctrl.results.Questions">
 
-                    <div class="panel panel-default" >
+                    <div class="panel panel-default">
                         <div class="panel-heading">
-                           {{question.Question}}
+                            {{question.Question}}
                         </div>
 
                         <div class="panel-body">
@@ -26,16 +26,17 @@
             <div class="col-sm-4 col-sm-offset-4">
                 <div class="btn-group btn-group-justified" role="group" aria-label="...">
                     <div class="btn-group" role="group">
-                        <button class="btn btn-primary" ng-click="vm.changePage('home')">Return to home</button>
+                        <button class="btn btn-primary" ng-click="vm.backPage()">Return</button>
                     </div>
                 </div>
             </div>
-           
+
         </div>
-      
+
     </div>
     <div class="col-sm-8 col-sm-offset-2">
         <div ng-if="ctrl.message" class="alert alert-info" role="alert">{{ctrl.message}}</div>
     </div>
+
 </div>
 
